院紹介ページの見出し文字色を調整

--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,7 @@ a, a:hover {
 }
 
 #main .intro-area .sub-title {
+  color: #447baf;
   font-size: 1.7rem;
   margin-left: 15px;
   margin-bottom: 0;
