--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,23 @@ a, a:hover {
   border-bottom: 1px dotted #7ea7cd;
 }
 
+#main .quotation {
+  display: block;
+  padding: 1.4rem;
+  line-height: 1.7;
+  color: #333;
+  word-break: break-all;
+  word-wrap: normal;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+#main .page-description {
+  margin: 1.2rem 1rem;
+  line-height: 1.7;
+}
+
 #main .header-icon {
   height: 28px;
 }
@@ -160,10 +177,13 @@ a, a:hover {
 }
 
 .notification-description {
-  margin-top: 1.5rem;
+  margin: 1.5rem 1.5rem 0 4.5rem;
+  line-height: 1.5;
 }
 
 .notification {
+  position: absolute;
+  left: 25px;
   font-weight: bold;
   margin-right: 1.2rem;
 }
